--- a/www/views/info.html
+++ b/www/views/info.html
@@ -1,13 +1,16 @@
-<ion-view class="home-view">
+<ion-view class="info-view" cache-view="false">
   <ion-nav-title>
-    <span>Social Login Example</span>
+    <span>User Information</span>
   </ion-nav-title>
   <ion-content>
     <div class="row">
-      <div class="col">
-        <h3 class="welcome-message">Hi {{user.name}}</h3>
-        <p class="welcome-message">You have logged in with {{user.title}}</p>
-        <img ng-src="{{user.picture}}">
+      <div class="col" ng-show='!profile.name'>
+        <h3 class="welcome-message">No info to show. Please log in.</h3>
+      </div>
+      <div class="col" ng-show='profile.name'>
+        <h3 class="welcome-message">Hi {{profile.name}}</h3>
+        <p class="welcome-message">You have logged in with {{profile.title}}</p>
+        <img ng-src="{{profile.picture}}">
         <a class="button button-assertive button-block button-outline" ng-click="showLogOutMenu()">
           Log Out
         </a>
