--- a/www/views/sidemenu.html
+++ b/www/views/sidemenu.html
@@ -17,9 +17,7 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ui-sref="welcome">
-          Back to Social Login Menu
-        </ion-item>
+        <ion-item menu-close ui-sref="welcome">Social Login Menu</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
